[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/virus.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/virus crop.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 414.342

[sub_resource type="CircleShape2D" id=2]
radius = 1196.15

[node name="virus" type="KinematicBody2D" groups=[
"virus",
]]
scale = Vector2( 0.075, 0.075 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="virus_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="virus_hitbox"]
visible = false
shape = SubResource( 1 )

[node name="range" type="Area2D" parent="."]
visible = false

[node name="range_col" type="CollisionShape2D" parent="range"]
shape = SubResource( 2 )

[node name="virus_timer" type="Timer" parent="."]
[connection signal="area_entered" from="virus_hitbox" to="." method="_on_virus_hitbox_area_entered"]
[connection signal="timeout" from="virus_timer" to="." method="_on_virus_timer_timeout"]
